[gd_scene load_steps=6 format=3 uid="uid://xtswu4a1xl25"]

[ext_resource type="Script" path="res://views/environment/env_script/env_main.gd" id="1_uh0fa"]
[ext_resource type="Texture2D" uid="uid://cbmhrmc8vf1ba" path="res://views/environment/env_main.webp" id="2_sc2yd"]
[ext_resource type="PackedScene" uid="uid://dy03mpip4oxg2" path="res://scenes/env_shelf_01.tscn" id="4_fsrct"]
[ext_resource type="PackedScene" uid="uid://bqmj8gxrwkdgu" path="res://scenes/env_shelf_02.tscn" id="6_bq554"]
[ext_resource type="PackedScene" uid="uid://dhxcw2jajj7rf" path="res://scenes/env_itm_spawner.tscn" id="7_cb8xm"]

[node name="Node2D" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_uh0fa")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(50, 50)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1149.0
offset_bottom = 643.0
grow_vertical = 2
texture = ExtResource("2_sc2yd")

[node name="EnvShelf01" parent="." instance=ExtResource("4_fsrct")]
show_behind_parent = true
position = Vector2(198, 375)

[node name="EnvShelf02" parent="." instance=ExtResource("6_bq554")]
position = Vector2(963, 375)

[node name="Button" type="Button" parent="."]
offset_left = 889.0
offset_top = 191.0
offset_right = 1016.0
offset_bottom = 223.0
text = "Reset"

[node name="EnvSpawnerLemon" parent="." instance=ExtResource("7_cb8xm")]
position = Vector2(54, 56)

[node name="EnvSpawnerApple" parent="." instance=ExtResource("7_cb8xm")]
position = Vector2(178, 56)
